--- a/asm/Makefile
+++ b/asm/Makefile
@@ -21,7 +21,8 @@ BUILD_DIR	=	../.trash/asm
 OBJ			=	$(SRC:%.c=$(BUILD_DIR)/%.o)
 
 LIB_FLAGS	=	-L./../lib/ -lmy -lprint
-CFLAGS		=	-Wall -Wextra -I./include/ -I./../include/ -I./../lib/include/
+IFLAGS		=	-I./include/ -I./../include/ -I./../lib/include/
+CFLAGS		=	-Wall -Wextra -Werror $(IFLAGS)
 
 TMP_FILES	=	*.gcno					\
 				*.gcda					\
@@ -49,7 +50,7 @@ all:		$(NAME)
 	@ $(ECHO) "$(C_RED)|==========> RULE NOT FOUND. <==========|$(C_RESET)"
 
 %.c:
-	@ $(ECHO) "$(C_RED)[ASM] -> $@$(C_RESET)"
+	@ $(ECHO) "$(C_BLUE)[ASM] $(C_RESET)-> $(C_RED)$@$(C_RESET)"
 	@ $(DIE)
 
 $(BUILD_DIR)/%.o: %.c
@@ -65,7 +66,6 @@ fclean:
 	@ $(RM) $(NAME)
 
 debug: CFLAGS += -g
-debug: CFLAGS += -Werror
 debug: all
 
-.PHONY: all re fclean debug
+.PHONY: all fclean debug
