feat(open champ):

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -36,6 +36,7 @@ SRC += check_settings_flag.c
 SRC += init_champion.c
 SRC += settings_id.c
 SRC += settings_load_address.c
+SRC += read_champion.c
 
 #========> DISPLAY <=======#
 SRC += display_help.c
