--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -39,6 +39,7 @@ SRC += init_champion.c
 SRC += settings_id.c
 SRC += settings_load_address.c
 SRC += read_champion.c
+SRC += init_startchamp.c
 
 #=========> VM <========#
 SRC += loop_vm.c
