--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -42,14 +42,19 @@ SRC += settings_load_address.c
 SRC += read_champion.c
 SRC += init_startchamp.c
 SRC += load_champion_in_vm.c
+SRC += init_process.c
 
 #=========> VM <========#
 SRC += loop_vm.c
 SRC += check_action.c
 SRC += define_wait_cycle.c
+SRC += get_arg_type.c
+SRC += get_arg_value.c
+SRC += move_pc.c
 
 #=========> FCT <========#
 SRC += live.c
+SRC += fct_sti.c
 
 #========> DISPLAY <=======#
 SRC += display_help.c
