fix(champion): PC bad incrementation

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -43,6 +43,7 @@ SRC += read_champion.c
 SRC += init_startchamp.c
 SRC += load_champion_in_vm.c
 SRC += init_process.c
+SRC += define_name_champ.c
 
 #=========> VM <========#
 SRC += loop_vm.c
