fit(add dif label):differents size label

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -57,6 +57,7 @@ SRC += op.c
 SRC += write_instruction.c
 SRC += write_conding_byte.c
 SRC += write_params.c
+SRC += get_dif_label.c
 
 BUILD_DIR	=	../.trash/asm
 
