feat(use get_diff_label): for get size to access label

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -65,7 +65,7 @@ OBJ			=	$(SRC:%.c=$(BUILD_DIR)/%.o)
 
 LIB_FLAGS	=	-L./../lib/ -lmy -lprint
 IFLAGS		=	-I./include/ -I./../include/ -I./../lib/include/
-CFLAGS		=	-Wall -Wextra -Werror $(IFLAGS) -g
+CFLAGS		=	-Wall -Wextra -Werror $(IFLAGS)
 
 TMP_FILES	=	*.gcno					\
 				*.gcda					\
