--- a/asm/Makefile
+++ b/asm/Makefile
@@ -59,6 +59,7 @@ SRC += write_conding_byte.c
 SRC += write_params.c
 SRC += get_dif_label.c
 SRC += check_size_line.c
+SRC += check_double_info.c
 
 BUILD_DIR	=	../.trash/asm
 
