fix(fix label double and detect label): fix coding style

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -61,6 +61,7 @@ SRC += get_dif_label.c
 SRC += check_size_line.c
 SRC += check_double_info.c
 SRC += double_label.c
+SRC += check_label.c
 
 BUILD_DIR	=	../.trash/asm
 
